docs: implement DTO struct for Swagger
